[package]
name = "mssql-http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
bb8 = "0.8.1"
bb8-tiberius = "0.15.0"
serde = { version = "1.0.181", features = ["derive"] }
serde_json = "1.0.104"
tiberius = { version = "0.12.2", features = ["chrono", "tds73"] }
tokio = { version = "1.29.1", features = ["full"] }
